syntax = "proto3";

package proto;
option go_package = "./proto";

message ActionInput {
    string SSPId = 1;
    string ControlId = 2;
    string ComponentId = 3;
    string AssessmentID = 4;
}

message ActionOutput {
    string SSPId = 1;
    string ControlId = 2;
    string ComponentId = 3;
    string AssessmentID = 4;
    bool Compliant = 5;
}

service ActionService {
    rpc Execute (ActionInput) returns (ActionOutput);
}
